# llmwiki

./: .gitignore  AGENTS.md  README.md  pyproject.toml
deploy/qdrant/: Chart.yaml  values-dev.yaml  values.lint.yaml  values.yaml
deploy/qdrant/templates/: networkpolicy.yaml
docs/: 01-architecture.md  02-aws-services.md  03-pod-design.md  04-processing-pipeline.md  05-mcp-integration.md  06-s3-structure.md  07-security.md  08-cost-estimate.md  09-roadmap.md  10-decisions.md  11-durability.md  12-seeding.md  13-global-memory.md  14-network-access.md  15-zero-touch-onboarding.md  16-design-review.md
gitops/qdrant/: application-dev.yaml
manifests/team-vault-gitops/: README.md  namespace.yaml  networkpolicy.yaml
manifests/team-vault-gitops/.omc/sessions/: 6f8d1d38-5d73-46a9-a056-3c82392cf8ea.json
manifests/team-vault-gitops/curator/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
manifests/team-vault-gitops/curator/templates/: cronjob.yaml
manifests/team-vault-gitops/ingest-api/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
manifests/team-vault-gitops/ingestor/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
manifests/team-vault-gitops/processor/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
manifests/team-vault-gitops/search-api/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
src/team_vault/: config.py  identity.py  ingest_app.py  mcp_server.py  models.py  search.py  search_app.py  storage.py
tests/: test_ingest_api.py  test_search_api.py  test_storage_search.py
(+21 files in other folders)
