[project]
name = "llmwiki"
version = "0.1.0"
description = "Team Vault MVP ingest and MCP search services"
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.35.0",
  "fastapi>=0.128.0",
  "mcp>=1.12.4",
  "pydantic>=2.12.0",
  "pydantic-settings>=2.7.0",
  "pyyaml>=6.0.2",
  "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.9.0",
]

[project.scripts]
team-vault-ingest = "team_vault.ingest_app:main"
team-vault-search = "team_vault.search_app:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

